# lightspace

./: .gitignore  Cargo.toml  Justfile  README.md
.zed/: settings.json
color/: Cargo.toml
color/src/: lib.rs
color/src/format/: hsvf32.rs  rgb8.rs  rgbf32.rs
common/: Cargo.toml
common/src/: lib.rs  math.rs  net.rs
common/src/color/: mod.rs  rgb8.rs  rgbaf32.rs  rgbf32.rs
common/src/effect/: mod.rs
effect/: Cargo.toml
effect/src/: lib.rs  math.rs
effect/src/color/: mod.rs  rgb8.rs  rgbf32.rs
effect/src/mode/: mod.rs
firmware/: .env.template  Cargo.toml  build.rs  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/.zed/: settings.json
firmware/src/: fx.rs  main.rs  net.rs  strip.rs
firmware/src/rmt_led/: mod.rs  ws2812b.rs
server/: Cargo.toml
