[package]
name = "common"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = []
firmware = ["dep:num-traits"]

[dependencies]
better_default = "1.0.5"
num_enum = { version = "0.7.5", default-features = false }
# postcard = "1.1.3"
# serde = { version = "1.0", default-features = false }

[dependencies.num-traits]
version = "0.2.19"
optional = true
default-features = false
features = ["libm"]
