[package]
edition = "2024"
name = "firmware"
rust-version = "1.88"
version = "0.1.0"

[features]
default = ["esp32c6"]
offline = []
esp32c6 = [
    "esp-hal/esp32c6",
    "esp-rtos/esp32c6",
    "esp-bootloader-esp-idf/esp32c6",
    "esp-radio/esp32c6",
    "esp-println/esp32c6",
]
esp32s3 = [
    "esp-hal/esp32s3",
    "esp-rtos/esp32s3",
    "esp-bootloader-esp-idf/esp32s3",
    "esp-radio/esp32s3",
    "esp-println/esp32s3",
]

[[bin]]
name = "firmware"
path = "./src/main.rs"
test = false
bench = false
doctest = false

[dependencies]
common = { path = "../common", default-features = false, features = [
  "firmware",
] }
esp-hal = { version = "1.0.0", features = ["unstable"] }
esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp-radio",
] }
esp-bootloader-esp-idf = "0.4.0"
embassy-net = { version = "0.7.1", features = [
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
] }
embedded-io = "0.7.1"
embedded-io-async = "0.7.0"
esp-alloc = "0.9.0"
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.9.1", features = [] }
embassy-time = "0.5.0"
esp-radio = { version = "0.17.0", features = [
  "esp-alloc",
  "smoltcp",
  "unstable",
  "wifi",
] }
smoltcp = { version = "0.12.0", default-features = false, features = [
  "medium-ethernet",
  "multicast",
  "proto-dhcpv4",
  "proto-dns",
  "proto-ipv4",
  "socket-dns",
  "socket-icmp",
  "socket-raw",
  "socket-tcp",
  "socket-udp",
] }
critical-section = "1.2.0"
static_cell = "2.1.1"
esp-println = "0.16.1"
num-traits = { version = "0.2.19", features = [
  "libm",
], default-features = false }
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"

[build-dependencies]
dotenvy = "0.15.7"

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false
